--- a/jackfash.css
+++ b/jackfash.css
@@ -1,19 +1,13 @@
-*{
+* {
     box-sizing: border-box;
 }
 
 body {
     font-family: Arial, sans-serif;
-    background-color: #f4f4f4; /* Assuming you want this as the global background */
+    background-color: #f4f4f4;
     margin: 0;
     padding: 0;
     color: #333;
-}
-
-main{
-    display: grid;
-    grid-template-columns: repeat(6,1fr);
-
 }
 
 .container {
@@ -27,6 +21,7 @@ main{
     margin-bottom: 20px;
     font-size: 2em;
 }
+
 #searchInput {
     padding: 10px;
     width: 300px;
@@ -34,9 +29,14 @@ main{
     font-size: 16px;
 }
 
+main {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+}
+
 .product-gallery {
     display: grid;
-    grid-template-columns: repeat(6,1fr);
+    grid-template-columns: repeat(6, 1fr);
     gap: 20px;
 }
 
@@ -49,20 +49,16 @@ main{
     padding: 10px;
     text-align: center;
     margin-top: 5rem;
-    
-
 }
 
 .product img {
     max-width: 100%;
     height: auto;
     margin-bottom: 10px;
-    width: 250px;  /* Set to your preferred width */
-    height: 250px; /* Set to your preferred height */
-    object-fit: cover; /* Ensures images are scaled correctly */
-    }
-    
-
+    width: 250px;  /* Preferred width */
+    height: 250px; /* Preferred height */
+    object-fit: cover;
+}
 
 .btn-buy, .btn-quality {
     display: inline-block;
@@ -95,6 +91,7 @@ nav button {
 nav button:hover {
     background-color: #555;
 }
+
 .social-links a {
     margin: 0 10px;
     display: inline-block;
@@ -108,28 +105,35 @@ nav button:hover {
 .social-icon:hover {
     transform: scale(1.9);
 }
-.social-icon {
-    transition: transform 0.3s ease;
+
+/* Responsive Design */
+@media screen and (max-width: 768px) {
+    main, .product-gallery {
+        grid-template-columns: repeat(3, 1fr);
+    }
 }
 
-/* Specific styles for Snapchat icon */
-.snapchat-icon {
-    width: 500px; /* Set your desired size */
-    height: 500px; /* Maintain aspect ratio */
+@media screen and (max-width: 480px) {
+    body {
+        font-size: 14px;
+    }
+
+    main, .product-gallery {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .btn-buy, .btn-quality {
+        padding: 8px 16px;
+        font-size: 14px;
+    }
+
+    nav button {
+        padding: 8px;
+        font-size: 14px;
+    }
 }
 
-/* Specific styles for Instagram icon */
-.instagram-icon {
-    width: 500px; /* Set your desired size */
-    height: 500px; /* Maintain aspect ratio */
-}
-
-.social-icon:hover {
-    transform: scale(1.5); /* Slightly enlarge icons on hover */
-    cursor: pointer;
-}
-
-/* Continue with the rest of your styles */
+/* Additional Styles */
 .home-button {
     position: absolute;
     top: 20px;
@@ -146,7 +150,7 @@ nav button:hover {
 }
 
 .home-button a:hover {
-    background-color: #535353; /* Slightly darker on hover */
+    background-color: #535353;
 }
 
 #sbody {
