--- a/jackfash.css
+++ b/jackfash.css
@@ -1,33 +1,14 @@
-*{
+
+* {
     box-sizing: border-box;
 }
 
-@media screen and (max-width: 768px) {
-        main, .product-gallery {
-            grid-template-columns: repeat(3, 1fr);
-        }
-    }
-    
-@media screen and (max-width: 480px) {
-        body {
-            font-size: 14px;
-        }
-    }
-
-
-
 body {
     font-family: Arial, sans-serif;
-    background-color: #f4f4f4; /* Assuming you want this as the global background */
+    background-color: #f4f4f4;
     margin: 0;
     padding: 0;
     color: #333;
-}
-
-main{
-    display: grid;
-    grid-template-columns: repeat(6,1fr);
-
 }
 
 .container {
@@ -41,6 +22,7 @@ main{
     margin-bottom: 20px;
     font-size: 2em;
 }
+
 #searchInput {
     padding: 10px;
     width: 300px;
@@ -48,9 +30,14 @@ main{
     font-size: 16px;
 }
 
+main {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+}
+
 .product-gallery {
     display: grid;
-    grid-template-columns: repeat(6,1fr);
+    grid-template-columns: repeat(6, 1fr);
     gap: 20px;
 }
 
@@ -63,14 +50,15 @@ main{
     padding: 10px;
     text-align: center;
     margin-top: 5rem;
-    
-
 }
 
 .product img {
     max-width: 100%;
     height: auto;
     margin-bottom: 10px;
+    width: 250px;  /* Preferred width */
+    height: 250px; /* Preferred height */
+    object-fit: cover;
 }
 
 .btn-buy, .btn-quality {
@@ -104,6 +92,7 @@ nav button {
 nav button:hover {
     background-color: #555;
 }
+
 .social-links a {
     margin: 0 10px;
     display: inline-block;
@@ -117,28 +106,35 @@ nav button:hover {
 .social-icon:hover {
     transform: scale(1.9);
 }
-.social-icon {
-    transition: transform 0.3s ease;
+
+/* Responsive Design */
+@media screen and (max-width: 768px) {
+    main, .product-gallery {
+        grid-template-columns: repeat(3, 1fr);
+    }
 }
 
-/* Specific styles for Snapchat icon */
-.snapchat-icon {
-    width: 500px; /* Set your desired size */
-    height: 500px; /* Maintain aspect ratio */
+@media screen and (max-width: 480px) {
+    body {
+        font-size: 14px;
+    }
+
+    main, .product-gallery {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .btn-buy, .btn-quality {
+        padding: 8px 16px;
+        font-size: 14px;
+    }
+
+    nav button {
+        padding: 8px;
+        font-size: 14px;
+    }
 }
 
-/* Specific styles for Instagram icon */
-.instagram-icon {
-    width: 500px; /* Set your desired size */
-    height: 500px; /* Maintain aspect ratio */
-}
-
-.social-icon:hover {
-    transform: scale(1.5); /* Slightly enlarge icons on hover */
-    cursor: pointer;
-}
-
-/* Continue with the rest of your styles */
+/* Additional Styles */
 .home-button {
     position: absolute;
     top: 20px;
@@ -155,7 +151,7 @@ nav button:hover {
 }
 
 .home-button a:hover {
-    background-color: #535353; /* Slightly darker on hover */
+    background-color: #535353;
 }
 
 #sbody {
